Fixed image issue and paths

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 <body>
 
-    <!-- HERO IMAGE SECTION -->
-    <section class="hero"></section>
-
     <!-- MAIN CONTENT -->
     <section class="content-section">
         <div class="main-content">
+
+            <!-- IMAGE FIXED AND VISIBLE -->
+            <img src="images/background.png" alt="test image" width="300">
 
             <h1>Global Pathway Immersion Platform</h1>
             <p>Find study or work opportunities abroad (USA, Canada, Gulf).</p>
@@ -53,7 +53,7 @@
         </div>
     </section>
 
-    <!-- TOP UNIVERSITIES (PART 5) -->
+    <!-- TOP UNIVERSITIES -->
     <section class="content-section">
         <div class="main-content">
             <h2>Top Study Destinations</h2>
@@ -77,4 +77,3 @@
 
 </body>
 </html>
-<!--submit today -->
